# PolySurfRec

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Definitions.h  Error_Handling.h  SurfRec.h  arghandler.h  definitions.h  errorhandler.h  filehandler.h  shape_detection_methods.h  surface_reconstruction_methods.h
scripts/: conv_xyz.py
src/: File_Handling.cpp  Shape_Detection.cpp  SurfRec.cpp  arghandler.cpp  filehandler.cpp  shape_detection_methods.cpp  surface_reconstruction_methods.cpp
